// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UriResolver get background 1`] = `
Object {
  "@type": "ImageObject",
  "author": Object {
    "@id": "john smith",
  },
  "contentSize": "51 kB",
  "contentUrl": "/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 333,
  "name": "My background",
  "thumbnail": Array [
    Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "/images/image2-50.webp",
      "encodingFormat": "image/webp",
      "height": 50,
      "width": 75,
    },
  ],
  "width": 500,
}
`;

exports[`UriResolver get blog1 1`] = `
Object {
  "@type": "BlogPosting",
  "author": Object {
    "@id": "john smith",
  },
  "dateCreated": 2019-10-26T00:00:00.000Z,
  "dateModified": 2019-10-26T00:00:00.000Z,
  "encodingFormat": "text/markdown",
  "headline": "My first blog",
  "keywords": Array [
    "rxjs",
    "java script",
  ],
  "position": 1,
  "text": "

Hello world",
}
`;

exports[`UriResolver get image2 1`] = `
Object {
  "@type": "ImageObject",
  "contentSize": "51 kB",
  "contentUrl": "/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 333,
  "thumbnail": Array [
    Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "/images/image2-50.webp",
      "encodingFormat": "image/webp",
      "height": 50,
      "width": 75,
    },
  ],
  "width": 500,
}
`;

exports[`UriResolver get johnsmith 1`] = `
Object {
  "@type": "Person",
  "email": "smitty123@hotmail.com",
  "familyName": "Smith",
  "givenName": "John",
  "hasOfferCatalog": Object {
    "@type": "OfferCatalog",
    "itemListElement": Array [
      Object {
        "@id": "https://www.sambal.dev/schema.json",
      },
    ],
    "name": "Open source software",
  },
  "name": "John Smith",
}
`;

exports[`UriResolver hydrate background 1`] = `
Object {
  "@id": "/background",
  "@type": "ImageObject",
  "author": Object {
    "@id": "/john%20smith",
    "@type": "Person",
    "email": "smitty123@hotmail.com",
    "familyName": "Smith",
    "givenName": "John",
    "hasOfferCatalog": Object {
      "@type": "OfferCatalog",
      "itemListElement": Array [
        Object {
          "@context": Object {
            "@base": "https://sambal.dev",
            "@vocab": "https://schema.org",
          },
          "@id": "/",
          "@type": "SoftwareSourceCode",
          "codeRepository": "https://github.com/chen4119/sambal",
          "description": "A linked data static site generator",
          "headline": "A linked data static site generator",
          "name": "Sambal",
          "programmingLanguage": "Typescript",
          "usageInfo": Array [
            Object {
              "alternativeHeadline": "Search engine optimized from day one",
              "headline": "Schema.org json-ld as the content model",
            },
            Object {
              "alternativeHeadline": "Share your json-ld just like how you share your webpage",
              "headline": "Generate HTML and schema.org json-ld files",
            },
            Object {
              "alternativeHeadline": "Automatically convert image to schema.org ImageObject and generate thumbnails",
              "headline": "Image to schema.org ImageObject",
            },
            Object {
              "alternativeHeadline": "Using schema.org means never get locked into any vendor specific content model",
              "headline": "Build universal themes",
            },
          ],
        },
      ],
      "name": "Open source software",
    },
    "name": "John Smith",
  },
  "contentSize": "51 kB",
  "contentUrl": "/images/image2.webp",
  "encodingFormat": "image/webp",
  "height": 333,
  "name": "My background",
  "thumbnail": Array [
    Object {
      "@type": "ImageObject",
      "contentSize": "1 kB",
      "contentUrl": "/images/image2-50.webp",
      "encodingFormat": "image/webp",
      "height": 50,
      "width": 75,
    },
  ],
  "width": 500,
}
`;

exports[`UriResolver hydrate blog1 1`] = `
Object {
  "@id": "/blogs/blog1",
  "@type": "BlogPosting",
  "author": Object {
    "@id": "/john%20smith",
    "@type": "Person",
    "email": "smitty123@hotmail.com",
    "familyName": "Smith",
    "givenName": "John",
    "hasOfferCatalog": Object {
      "@type": "OfferCatalog",
      "itemListElement": Array [
        Object {
          "@context": Object {
            "@base": "https://sambal.dev",
            "@vocab": "https://schema.org",
          },
          "@id": "/",
          "@type": "SoftwareSourceCode",
          "codeRepository": "https://github.com/chen4119/sambal",
          "description": "A linked data static site generator",
          "headline": "A linked data static site generator",
          "name": "Sambal",
          "programmingLanguage": "Typescript",
          "usageInfo": Array [
            Object {
              "alternativeHeadline": "Search engine optimized from day one",
              "headline": "Schema.org json-ld as the content model",
            },
            Object {
              "alternativeHeadline": "Share your json-ld just like how you share your webpage",
              "headline": "Generate HTML and schema.org json-ld files",
            },
            Object {
              "alternativeHeadline": "Automatically convert image to schema.org ImageObject and generate thumbnails",
              "headline": "Image to schema.org ImageObject",
            },
            Object {
              "alternativeHeadline": "Using schema.org means never get locked into any vendor specific content model",
              "headline": "Build universal themes",
            },
          ],
        },
      ],
      "name": "Open source software",
    },
    "name": "John Smith",
  },
  "dateCreated": 2019-10-26T00:00:00.000Z,
  "dateModified": 2019-10-26T00:00:00.000Z,
  "encodingFormat": "text/markdown",
  "headline": "My first blog",
  "keywords": Array [
    "rxjs",
    "java script",
  ],
  "position": 1,
  "text": "

Hello world",
}
`;

exports[`UriResolver hydrate header 1`] = `
Object {
  "@id": "/header",
  "@type": "WPHeader",
  "hasPart": Array [
    Object {
      "@type": "SiteNavigationElement",
      "name": "About",
      "url": "/about",
    },
    Object {
      "@type": "SiteNavigationElement",
      "name": "Docs",
      "url": "/get-started",
    },
    Array [
      Object {
        "@type": "SiteNavigationElement",
        "name": "My first blog",
        "url": "/blogs/blog1",
      },
      Object {
        "@type": "SiteNavigationElement",
        "name": "My second blog",
        "url": "/blogs/blog2",
      },
    ],
  ],
  "headline": "Sambal",
  "potentialAction": Array [
    Object {
      "@type": "DownloadAction",
      "target": "https://github.com/chen4119/sambal",
    },
  ],
}
`;

exports[`UriResolver hydrate johnsmith 1`] = `
Object {
  "@id": "/john%2520smith",
  "@type": "Person",
  "email": "smitty123@hotmail.com",
  "familyName": "Smith",
  "givenName": "John",
  "hasOfferCatalog": Object {
    "@type": "OfferCatalog",
    "itemListElement": Array [
      Object {
        "@context": Object {
          "@base": "https://sambal.dev",
          "@vocab": "https://schema.org",
        },
        "@id": "/",
        "@type": "SoftwareSourceCode",
        "codeRepository": "https://github.com/chen4119/sambal",
        "description": "A linked data static site generator",
        "headline": "A linked data static site generator",
        "name": "Sambal",
        "programmingLanguage": "Typescript",
        "usageInfo": Array [
          Object {
            "alternativeHeadline": "Search engine optimized from day one",
            "headline": "Schema.org json-ld as the content model",
          },
          Object {
            "alternativeHeadline": "Share your json-ld just like how you share your webpage",
            "headline": "Generate HTML and schema.org json-ld files",
          },
          Object {
            "alternativeHeadline": "Automatically convert image to schema.org ImageObject and generate thumbnails",
            "headline": "Image to schema.org ImageObject",
          },
          Object {
            "alternativeHeadline": "Using schema.org means never get locked into any vendor specific content model",
            "headline": "Build universal themes",
          },
        ],
      },
    ],
    "name": "Open source software",
  },
  "name": "John Smith",
}
`;
